# tanos

./: CONTEXT.md  Cargo.toml  Dockerfile  docker-compose.yml  launch.sh  prd.md
tanos-app/frontend/: index.html
tanos-core/: Cargo.toml
tanos-core/src/: crypto.rs  identity.rs  lib.rs
tanos-net/: Cargo.toml
tanos-net/src/: discovery.rs  lib.rs  network.rs  peers.rs  transport.rs
tanos-node/: Cargo.toml
tanos-node/src/: cli.rs  dashboard.html  db.rs  main.rs  setup.rs  web.rs
