[package]
name = "tanos-core"
version = "0.1.0"
edition = "2021"
description = "Identity, cryptography, and wire format primitives for TanOS mesh network"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
anyhow = "1"
directories = "5"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
