[package]
name = "tanos-node"
version = "0.1.0"
edition = "2021"
description = "Binary entry point for TanOS mesh network node"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
tanos-core = { path = "../tanos-core" }
tanos-net = { path = "../tanos-net" }
